# money-steward

./: .gitignore  .scalafmt.conf  README.md  build.sbt  flake.nix  mkdocs.yml  pyproject.toml  shell.nix
.github/workflows/: ci.yml  docs.yml  update-flake.yml
.woodpecker/: .docs.yml
core/src/main/scala/es/jesusmtnez/ms/: Main.scala
core/src/test/scala/es/jesusmtnez/ms/: MainSuite.scala
docs/: index.md
fireflyiii4s/src/main/scala/es/jesusmtnez/ff/: Auth.scala  RequestConstructor.scala
fireflyiii4s/src/main/scala/es/jesusmtnez/ff/api/: About.scala  RequestConstructor.scala
fireflyiii4s/src/main/scala/es/jesusmtnez/ff/data/: FireflyError.scala  SystemInfo.scala
fireflyiii4s/src/main/scala/es/jesusmtnez/ff/endpoints/: About.scala
fireflyiii4s/src/main/scala/es/jesusmtnez/ff/model/: SystemInfo.scala
modules/core/src/main/scala/es/jesusmtnez/ms/: Main.scala
modules/fireflyiii4s/src/main/scala/es/jesusmtnez/ff/api/: About.scala  Accounts.scala  RequestConstructor.scala
modules/fireflyiii4s/src/main/scala/es/jesusmtnez/ff/data/: Account.scala  AccountRead.scala  FireflyError.scala  FireflyResponse.scala  Meta.scala  SystemInfo.scala
modules/webapp/: index.html  package.json  tyrianapp.js  vite.config.js
modules/webapp/src/main/scala/es/jesusmtnez/ms/: Main.scala  WebApp.scala
money_steward/: cli.py
money_steward/cli/: main.py
money_steward/cli/commands/: config.py  users.py
project/: plugins.sbt
src/main/scala/es/jesusmtnez/ms/: Main.scala
