[tool.poetry]
name = "money_steward"
version = "0.0.1"
description = "Personal finances assistant"
authors = [
    "JesusMtnez <jesusmartinez93@gmail.com>"
]
readme = "README.md"
repository = "https://github.com/JesusMtnez/money-steward"
homepage = "https://jesusmtnez.es/money-steward"
keywords = ["personal", "finances", "assistant" ]

packages = [
  { include = "money_steward" }
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = "money_steward.cli:main"
